native/include/jyppx/cuda/runtime.h

JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_synchronize(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_reset(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_limit(int32_t limit, size_t* out_value);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_set_limit(int32_t limit, size_t value);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_set_cache_config(int32_t config);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_shared_memory_config(int32_t* out_config);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_set_shared_memory_config(int32_t config);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_pci_bus_id(int32_t device, char* output_buffer, size_t output_buffer_size, size_t* out_required_size);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_p2p_attribute(int32_t attribute, int32_t source_device, int32_t destination_device, int32_t* out_value);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_p2p_atomic_capabilities(uint32_t* capabilities, const int32_t* operations, uint32_t count, int32_t source_device, int32_t destination_device);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_nv_sci_sync_attributes_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_register_async_notification_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_unregister_async_notification_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_event_create(uint32_t flags, JYPPX_CudaEvent** out_event);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_event_get_flags(JYPPX_CudaEvent* event_handle, uint32_t* out_flags);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_event_query(JYPPX_CudaEvent* event_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_event_record(JYPPX_CudaEvent* event_handle, JYPPX_CudaStream* stream);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_event_record_with_flags(JYPPX_CudaEvent* event_handle, JYPPX_CudaStream* stream, uint32_t flags);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_event_synchronize(JYPPX_CudaEvent* event_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_event_elapsed_time(JYPPX_CudaEvent* start_event, JYPPX_CudaEvent* end_event, float* out_milliseconds);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_event_destroy(JYPPX_CudaEvent* event_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_set_current_memory_pool(int32_t device, uint64_t pool_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_texture_1d_linear_max_width(const JYPPX_CudaChannelFormatDesc* descriptor, int32_t device, size_t* out_max_width);
/* BEGIN CUDA TWENTY-THIRD BATCH GENERATED DECLARATIONS */
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_p2_p_attribute(int32_t attribute, int32_t source_device, int32_t destination_device, int32_t* out_value);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_shared_mem_config(int32_t* out_config);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_set_shared_mem_config(int32_t config);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_get_stream_priority_range(int32_t* out_least_priority, int32_t* out_greatest_priority);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_event_elapsed_time_v2(JYPPX_CudaEvent* start_event, JYPPX_CudaEvent* end_event, float* out_milliseconds);
/* END CUDA FIFTY-FIRST BATCH KERNEL LIBRARY METADATA */

/* BEGIN CUDA FIFTY-SECOND BATCH PRIMARY EXECUTION CONTEXT */
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_primary_execution_context_get_safe(int32_t device, JYPPX_CudaExecutionContext** out_context);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_context_get_device_safe(JYPPX_CudaExecutionContext* context, int32_t* out_device);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_context_get_id_safe(JYPPX_CudaExecutionContext* context, uint64_t* out_context_id);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_context_synchronize_safe(JYPPX_CudaExecutionContext* context);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_context_create_stream_safe(JYPPX_CudaExecutionContext* context, uint32_t flags, int32_t priority, JYPPX_CudaStream** out_stream);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_context_record_event_safe(JYPPX_CudaExecutionContext* context, JYPPX_CudaEvent* event_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_context_wait_event_safe(JYPPX_CudaExecutionContext* context, JYPPX_CudaEvent* event_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_context_get_dev_resource_snapshot_safe(JYPPX_CudaExecutionContext* context, int32_t resource_type, JYPPX_CudaDevResourceSnapshot* out_snapshot);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_trim_graph_memory(int32_t device);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_reset_graph_memory_high_watermark(int32_t device, int32_t attribute);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_reset_graph_memory_used_high(int32_t device);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_device_reset_graph_memory_reserved_high(int32_t device);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_ctx_destroy_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_ctx_get_device_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_ctx_get_dev_resource_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_ctx_get_id_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_ctx_record_event_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_ctx_stream_create_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_ctx_synchronize_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_execution_ctx_wait_event_deferred(void);