src/JYPPX.CudaSharp/Internal/Interop/Generated/GeneratedCudaManifestNativeMethods.g.cs


    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_limit(int limit, out UIntPtr out_value);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_nv_sci_sync_attributes_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_p2_p_attribute(int attribute, int source_device, int destination_device, out int out_value);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_p2p_atomic_capabilities(IntPtr capabilities, IntPtr operations, uint count, int source_device, int destination_device);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_p2p_attribute(int attribute, int source_device, int destination_device, out int out_value);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_pci_bus_id(int device, byte[] output_buffer, UIntPtr output_buffer_size, out UIntPtr out_required_size);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_primary_execution_context_get_safe(int device, out SafeCudaExecutionContextHandle out_context);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_shared_mem_config(out int out_config);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_shared_memory_config(out int out_config);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_stream_priority_range(out int out_least_priority, out int out_greatest_priority);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_get_texture_1d_linear_max_width(ref NativeCudaChannelFormatDesc descriptor, int device, out UIntPtr out_max_width);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_register_async_notification_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_reset();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_reset_graph_memory_high_watermark(int device, int attribute);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_reset_graph_memory_reserved_high(int device);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_reset_graph_memory_used_high(int device);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_set_cache_config(int config);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_set_current_memory_pool(int device, ulong pool_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_set_limit(int limit, UIntPtr value);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_set_shared_mem_config(int config);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_set_shared_memory_config(int config);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_synchronize();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_trim_graph_memory(int device);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_device_unregister_async_notification_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_event_create(uint flags, out SafeCudaEventHandle out_event);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_event_destroy(IntPtr event_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_event_elapsed_time(SafeCudaEventHandle start_event, SafeCudaEventHandle end_event, out float out_milliseconds);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_event_elapsed_time_v2(SafeCudaEventHandle start_event, SafeCudaEventHandle end_event, out float out_milliseconds);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_event_get_flags(SafeCudaEventHandle event_handle, out uint out_flags);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_event_query(SafeCudaEventHandle event_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_event_record(SafeCudaEventHandle event_handle, SafeCudaStreamHandle stream);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_event_record_with_flags(SafeCudaEventHandle event_handle, SafeCudaStreamHandle stream, uint flags);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_event_synchronize(SafeCudaEventHandle event_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_context_create_stream_safe(SafeCudaExecutionContextHandle context, uint flags, int priority, out SafeCudaStreamHandle out_stream);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_context_get_dev_resource_snapshot_safe(SafeCudaExecutionContextHandle context, int resource_type, out NativeCudaDevResourceSnapshot out_snapshot);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_context_get_device_safe(SafeCudaExecutionContextHandle context, out int out_device);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_context_get_id_safe(SafeCudaExecutionContextHandle context, out ulong out_context_id);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_context_record_event_safe(SafeCudaExecutionContextHandle context, SafeCudaEventHandle event_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_context_synchronize_safe(SafeCudaExecutionContextHandle context);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_context_wait_event_safe(SafeCudaExecutionContextHandle context, SafeCudaEventHandle event_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_ctx_destroy_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_ctx_get_dev_resource_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_ctx_get_device_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_ctx_get_id_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_ctx_record_event_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_ctx_stream_create_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_ctx_synchronize_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_execution_ctx_wait_event_deferred();
